--- a/_tomb.scss
+++ b/_tomb.scss
@@ -4,17 +4,26 @@
  * Created Date: Tuesday April 24th 2018
  * Author: Brian Leishman
  * -----
- * Last Modified: Sat May 05 2018
+ * Last Modified: Mon May 07 2018
  * Modified By: Brian Leishman
  * -----
  * Copyright (c) 2018 Stumpyinc, LLC
  */
 
+// Set colors and whatnot from bootstrap to keep the theme consistent
+$mdc-theme-primary: map-get($theme-colors,'primary');
+$mdc-theme-on-primary: $body-bg;
+$mdc-theme-secondary: $mdc-theme-primary;
+
+$mdc-theme-surface: $body-bg;
+
+
 // Google actually has official web components, so we'll
 // use a couple of those to save some effort
-@import "../@material/elevation/mdc-elevation";
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400');
+@import "node_modules/@material/elevation/mdc-elevation";
+@import "node_modules/@material/checkbox/mdc-checkbox";
 
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400');
 
 // global styles
 
@@ -48,7 +57,7 @@ h1{
     border-radius:2px;
     padding-left:8px;
     padding-right:8px;
-    padding-top: 4px;
+    padding-top: 5px;
     border:none;
     overflow:hidden;
     position:relative;
@@ -324,4 +333,24 @@ h1{
         justify-content: right;
         margin:32px 0 0 auto;
     }
+}
+
+
+// checkboxes!
+
+.mdc-checkbox label{
+    vertical-align: middle;
+    height: 38px;
+    line-height: 38px;
+    margin-bottom: 0;
+}
+
+.mdc-form-field{
+    margin-left: -11px;
+}
+
+.mdc-form-field label{
+    height: 38px;
+    line-height: 38px;
+    margin-bottom: 0;
 }
